--- a/rooster-android-app/res/values/strings.xml
+++ b/rooster-android-app/res/values/strings.xml
@@ -8,12 +8,24 @@
     <string name="thursday">Thu</string>
     <string name="friday">Fri</string>
     <string name="time">Time</string>
-    <string name="time1">7:30 - 9:10</string>
-    <string name="time2">9:30 - 11:10</string>
-    <string name="time3">11:30 - 13:10</string>
-    <string name="time4">13:30 - 15:10</string>
-    <string name="time5">15:30 - 17:10</string>
-    <string name="time6">17:30 - 19:10</string>
-    <string name="time7">19:30 - 21:10</string>
+    <string name="time1">7:30\n\n9:10</string>
+    <string name="time2">9:30\n\n11:10</string>
+    <string name="time3">11:30\n\n13:10</string>
+    <string name="time4">13:30\n\n15:10</string>
+    <string name="time5">15:30\n\n17:10</string>
+    <string name="time6">17:30\n\n19:10</string>
+    <string name="time7">19:30\n\n21:10</string>
     <string name="subject">Subject</string>
+    <string name="test_subject">Test\n\nSubject</string>
+    <string name="subject_details">Subject details</string>
+    <string name="name">Name</string>
+    <string name="classroom">Classroom</string>
+    <string name="teacher">Teacher</string>
+    <string name="color">Color</string>
+    <string name="cancel">Cancel</string>
+    <string name="delete">Delete</string>
+    <string name="ok">Ok</string>
+    <string name="color_blue">blue</string>
+    <string name="color_red">red</string>
+    <string name="red">red</string>
 </resources>
