--- a/rooster-android-app/res/values/strings.xml
+++ b/rooster-android-app/res/values/strings.xml
@@ -8,13 +8,20 @@
     <string name="thursday">Thu</string>
     <string name="friday">Fri</string>
     <string name="time">Time</string>
-    <string name="time1">7:30\n\n9:10</string>
-    <string name="time2">9:30\n\n11:10</string>
-    <string name="time3">11:30\n\n13:10</string>
-    <string name="time4">13:30\n\n15:10</string>
-    <string name="time5">15:30\n\n17:10</string>
-    <string name="time6">17:30\n\n19:10</string>
-    <string name="time7">19:30\n\n21:10</string>
+    <string name="time0from">7:30</string>
+    <string name="time0to">9:10</string>
+    <string name="time1from">9:30</string>
+    <string name="time1to">11:10</string>
+    <string name="time2from">11:30</string>
+    <string name="time2to">13:10</string>
+    <string name="time3from">13:30</string>
+    <string name="time3to">15:10</string>
+    <string name="time4from">15:30</string>
+    <string name="time4to">17:10</string>
+    <string name="time5from">17:30</string>
+    <string name="time5to">19:10</string>
+    <string name="time6from">19:30</string>
+    <string name="time6to">21:10</string>
     <string name="subject">Subject</string>
     <string name="test_subject">Test\n\nSubject</string>
     <string name="subject_details">Subject details</string>
